feat: se agrego el header con el nav y titulo, una imagen y el menu de navegación

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Ciberseguridad</h1>
-    <h2>Que es la ciberseguridad</h2>
-</body>
+  </head>
+  <body>
+    <header>
+      <h1>Ciberseguridad</h1>
+      <img
+        src="https://universidadeuropea.com/resources/media/images/analista-ciberseguridad-800x450.width-640.jpg"
+        height="150"
+        alt="imagen de ciberseguridad"
+      />
+      <nav>
+        <ul>
+            <li><a href="#inicio">Inicio</a></li>
+            <li><a href="#amenazas">Amenazas</a></li>
+            <li><a href="#consejo">Consejo</a></li>
+            <li><a href="#contacto">Contactos</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
