feat: se añadió la sección inicio con contenido informativo e icono

--- a/index.html
+++ b/index.html
@@ -15,12 +15,26 @@
       />
       <nav>
         <ul>
-            <li><a href="#inicio">Inicio</a></li>
-            <li><a href="#amenazas">Amenazas</a></li>
-            <li><a href="#consejo">Consejo</a></li>
-            <li><a href="#contacto">Contactos</a></li>
+          <li><a href="#inicio">Inicio</a></li>
+          <li><a href="#amenazas">Amenazas</a></li>
+          <li><a href="#consejo">Consejo</a></li>
+          <li><a href="#contacto">Contactos</a></li>
         </ul>
       </nav>
     </header>
+
+    <main>
+      <section id="inicio">
+        <h2>Manten tu seguridad digital</h2>
+        <p>
+          Podras explorar los consejos clave sobre civerseguridad y podras
+          aprender a defenderte de las amenazas
+        </p>
+        <img
+          src="https://img.icons8.com/?size=100&id=Sz41Fa1WF4VT&format=png&color=000000"
+          alt="logo sistema seguro"
+        />
+      </section>
+    </main>
   </body>
 </html>
