feat: se añadieron clases a los elementos html y se comenzo a analizar la estructura del css

--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <header>
-      <h1>Ciberseguridad</h1>
-      <img
-        src="https://universidadeuropea.com/resources/media/images/analista-ciberseguridad-800x450.width-640.jpg"
-        height="150"
-        alt="imagen de ciberseguridad"
-      />
-      <nav>
+    <header class="top-header">
+
+      <div class="contenedor-logo">
+        <h1>Ciberseguridad</h1>
+        <img
+          src="https://universidadeuropea.com/resources/media/images/analista-ciberseguridad-800x450.width-640.jpg"
+          height="150"
+          alt="imagen de ciberseguridad" class="logo-img"
+        />
+      </div>
+
+      <nav class="nav-menu">
         <ul>
           <li><a href="#inicio">Inicio</a></li>
           <li><a href="#amenazas">Amenazas</a></li>
@@ -21,6 +26,7 @@
           <li><a href="#contacto">Contactos</a></li>
         </ul>
       </nav>
+
     </header>
 
     <main>
