--- a/index.html
+++ b/index.html
@@ -9,23 +9,20 @@
   <body>
     <header class="top-header">
 
-      <div class="contenedor-logo">
-        <h1>Ciberseguridad</h1>
-        <img
-          src="https://universidadeuropea.com/resources/media/images/analista-ciberseguridad-800x450.width-640.jpg"
-          height="150"
-          alt="imagen de ciberseguridad" class="logo-img"
-        />
-      </div>
+      <div class="contenedor">
+        
+        <h1 class="tema_logo">
+          <span class="icono" >🛡️</span>Ciberseguridad</h1>
 
       <nav class="nav-menu">
         <ul>
-          <li><a href="#inicio">Inicio</a></li>
-          <li><a href="#amenazas">Amenazas</a></li>
-          <li><a href="#consejo">Consejo</a></li>
-          <li><a href="#contacto">Contactos</a></li>
+          <li><a href="#inicio" class="link">Inicio</a></li>
+          <li><a href="#amenazas" class="link">Amenazas</a></li>
+          <li><a href="#consejo" class="link">Consejo  </a></li>
+          <li><a href="#contacto" class="link">Contactos</a></li>
         </ul>
       </nav>
+      </div>
 
     </header>
 
