feat: agregar la sección de inicio con información de seguridad digital

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h1 class="tema_logo">
           <img src="https://cdn-icons-png.flaticon.com/512/1048/1048949.png" alt="logo">
           <span>Ciberseguridad</span>
+
       </div>
 
       <nav class="nav-menu">
@@ -30,6 +31,19 @@
 
     <main>
       <section id="inicio">
+        <div class="contenedor">
+        <span>seguridad digital</span>
+        <h2>protege tu identidad digital</h2>
+
+        <p>podras explorar los conseptos clave  de la Ciberseguridad y aprende a defenderte de las Amenazas modernas con las mejores practicas</p>
+        
+        <a href="#amenazas">inicar</a>
+        <a href="#consejos">consejos</a>
+
+        <h3>99%</h3><p>Protección</p>
+        <h3>24/7</h3><p>analisis de vulnebilidades</p>
+        <h3>1m+</h3><p>usuarios</p>
+      </div>
         
       </section>
     </main>
