feat: agregar la sección de amenaas con información sobre princpiales formas de ataque

--- a/index.html
+++ b/index.html
@@ -44,7 +44,19 @@
         <h3>24/7</h3><p>analisis de vulnebilidades</p>
         <h3>1m+</h3><p>usuarios</p>
       </div>
-        
+      </section>
+
+      <section id="amenazas">
+        <h2>amenazas comunes</h2>
+        <h3>pishin/h3>
+          <p>correos falsos que intentan robar tus datos</p>
+
+          <h3>malware</h3>
+          <p>programas dañinos que afectan tu pc</p>
+
+
+          <h3>ransomware</h3>
+          <p>secuestra tus archivos y te pide dinero</p>
       </section>
     </main>
   </body>
