feat:se agrego la seccion de consejos incluyendo practicas para mantenerte seguro

--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
           <h3>ransomware</h3>
           <p>secuestra tus archivos y te pide dinero</p>
       </section>
+
+      <section id="consejos">
+        <h2>consejos basicos</h2>
+        <ul>
+          <li>usa contraseñas seguras</li>
+          <li>activa la verificacion 2 pasos</li>
+          <li>manten tus dispositivos actualizados</li>
+          <li>no habraz enlaces sospechosos</li>
+          <li>haz copias de seguridas</li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
