--- a/index.html
+++ b/index.html
@@ -69,6 +69,17 @@
           <li>haz copias de seguridas</li>
         </ul>
       </section>
+
+      <section>
+        <h2>contacto</h2>
+        <form action="">
+          <input type="text" placeholder="ingresa tu nombre">
+          <input type="email" placeholder="ingresa tu correo">
+          <textarea placeholder="ingresa tu mensaje" id=""></textarea>
+          <button type="submit">enviar</button>
+        </form>
+      </section>
+      
     </main>
   </body>
 </html>
