feat: se agrego clases y estilos a las eccion inicio y amenazas

--- a/index.html
+++ b/index.html
@@ -54,20 +54,28 @@
 
       </section>
 
-      <section id="amenazas" class="targetas">
+      <section id="amenazas" class="seccion">
 
         <h2>amenazas comunes</h2>
+
+        <div class="targetas">
+
         <div class="target">
         <h3>pishin/h3>
           <p>correos falsos que intentan robar tus datos</p>
         </div>
 
+        <div class="target">
           <h3>malware</h3>
           <p>programas dañinos que afectan tu pc</p>
+        </div>
 
-
-          <h3>ransomware</h3>
+        <div class="target">
+        <h3>ransomware</h3>
           <p>secuestra tus archivos y te pide dinero</p>
+        </div>
+
+        </div>
       </section>
 
       <section id="consejos">
