feat: se agrego la clase seccion para diseño a la seccion consejos

--- a/index.html
+++ b/index.html
@@ -78,18 +78,22 @@
         </div>
       </section>
 
-      <section id="consejos">
+      <section id="consejos" class="seccion">
         <h2>consejos basicos</h2>
-        <ul>
+
+        <ul class="lista">
+
           <li>usa contraseñas seguras</li>
           <li>activa la verificacion 2 pasos</li>
           <li>manten tus dispositivos actualizados</li>
           <li>no habraz enlaces sospechosos</li>
           <li>haz copias de seguridas</li>
+
         </ul>
+    
       </section>
 
-      <section>
+      <section class="seccion">
         <h2>contacto</h2>
         <form action="">
           <input type="text" placeholder="ingresa tu nombre">
