fix: correccion de errores en html y css

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         <span class="etiqueta">seguridad digital</span>
         <h2>protege tu identidad digital</h2>
 
-        <p>podras explorar los conseptos clave  de la Ciberseguridad y aprende a defenderte de las Amenazas modernas con las mejores practicas</p>
+        <p>podras explorar los conceptos clave  de la Ciberseguridad y aprende a defenderte de las Amenazas modernas con las mejores practicas</p>
         
         <a href="#amenazas" class="consejos">inicar</a>
         <a href="#consejos" class="consejos">consejos</a>
 
         <div class="estadisticas">
         <h3>99%</h3><p>Protección</p>
-        <h3>24/7</h3><p>analisis de vulnebilidades</p>
+        <h3>24/7</h3><p>analisis de vulnerabilidades</p>
         <h3>1m+</h3><p>usuarios</p>
         </div>
       </div>
@@ -61,7 +61,7 @@
         <div class="targetas">
 
         <div class="target">
-        <h3>pishin/h3>
+        <h3>phishin</h3>
           <p>correos falsos que intentan robar tus datos</p>
         </div>
 
@@ -86,8 +86,8 @@
           <li>usa contraseñas seguras</li>
           <li>activa la verificacion 2 pasos</li>
           <li>manten tus dispositivos actualizados</li>
-          <li>no habraz enlaces sospechosos</li>
-          <li>haz copias de seguridas</li>
+          <li>no abras enlaces sospechosos</li>
+          <li>haz copias de seguridad</li>
 
         </ul>
     
