fix: se corrgio error en el links consejos

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p>podras explorar los conceptos clave  de la Ciberseguridad y aprende a defenderte de las Amenazas modernas con las mejores practicas</p>
         
         <a href="#amenazas" class="consejos">inicar</a>
-        <a href="#consejos" class="consejos">consejos</a>
+        <a href="#consejo" class="consejos">consejos</a>
 
         <div class="estadisticas">
         <h3>99%</h3><p>Protección</p>
@@ -78,7 +78,7 @@
         </div>
       </section>
 
-      <section id="consejos" class="seccion">
+      <section id="consejo" class="seccion">
         <h2>consejos basicos</h2>
 
         <ul>
@@ -99,7 +99,7 @@
           <input type="text" placeholder="ingresa tu nombre">
           <input type="email" placeholder="ingresa tu correo">
           <textarea placeholder="ingresa tu mensaje" id=""></textarea>
-          <button type="submit" class="consejos">enviar</button>
+          <button type="submit" class="contacto">enviar</button>
         </form>
       </section>
 
