fix: se modificaron estilos para colores y en la seccion consejos se agrego caja a la lista

--- a/index.html
+++ b/index.html
@@ -83,23 +83,27 @@
 
         <ul>
 
-          <li>usa contraseñas seguras</li>
-          <li>activa la verificacion 2 pasos</li>
-          <li>manten tus dispositivos actualizados</li>
-          <li>no abras enlaces sospechosos</li>
-          <li>haz copias de seguridad</li>
+          <li class="lista">usa contraseñas seguras</li>
+          <li class="lista">activa la verificacion 2 pasos</li>
+          <li class="lista">manten tus dispositivos actualizados</li>
+          <li class="lista">no abras enlaces sospechosos</li>
+          <li class="lista">haz copias de seguridad</li>
 
         </ul>
     
       </section>
 
       <section id="contacto" class="seccion">
-        <h2>contacto</h2>
+        <h2>Contacto</h2>
         <form>
+          <label for="name">Ingresa tu nombre</label>
           <input type="text" placeholder="ingresa tu nombre">
+          <label for="email">Ingresa tu correo</label>
           <input type="email" placeholder="ingresa tu correo">
+          <label for="mensaje">Ingresa tu mensaje</label>
           <textarea placeholder="ingresa tu mensaje" id=""></textarea>
-          <button type="submit" class="contacto">enviar</button>
+          <label for="info">Enviar información</label>
+          <button type="submit" class="consejos">enviar</button>
         </form>
       </section>
 
