feat: se agrego los iconos de la sección consejos

--- a/index.html
+++ b/index.html
@@ -87,11 +87,26 @@
 
         <ul>
 
-          <li class="lista">usa contraseñas seguras</li>
-          <li class="lista">activa la verificacion 2 pasos</li>
-          <li class="lista">manten tus dispositivos actualizados</li>
-          <li class="lista">no abras enlaces sospechosos</li>
-          <li class="lista">haz copias de seguridad</li>
+          <li class="lista">
+            <img src="./favicon/contraseñas-seguras.png" width="50px">
+            <span>Usar contraseñas seguras</span>
+          </li>
+          <li class="lista">
+            <img src="./favicon/verificacion-2-paso.png" width="50px">
+            <span>Activar la verificacion 2 paso</span>
+          </li>
+          <li class="lista">
+            <img src="./favicon/manten-dispositivos-actualizados.png" width="50px">
+            <span>Actualiza tus dispositivos</span>
+          </li>
+          <li class="lista">
+            <img src="./favicon/enlaces-sospechoso.png" width="50px">
+            <span>No entres a enlaces sospechosos</span>
+          </li>
+          <li class="lista">
+            <img src="./favicon/copias-de-seguridad.png" width="50px">
+            <span>Implementa copias de seguridad/span>
+          </li>
 
         </ul>
     
