feat: Se agrego un identificador (luna) para el tema oscuro y un identificador (sol) para el tema claro ademas se intregro codigo js para el toggle

--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
 
         <div class="contenedor_izquierdo">
 
-        <span class="etiqueta">seguridad digital</span>  <button  id="toggleTema" class="consejos">tema</button>
+        <span class="etiqueta">seguridad digital</span>  
+
+        <button  id="toggleTema" class="consejos">
+        <span id="iconoTema">🌙</span>
+        </button>
+
         <h2>protege tu identidad digital</h2>
 
         <p>podras explorar los conceptos clave  de la Ciberseguridad y aprende a defenderte de las Amenazas modernas con las mejores practicas</p>
