docs: se agrego informacion sobre: Autor, proyecto,link de repositorio y link del sitio en Github Pages, descripción, objetivos, contenido del sitio, estructira del reposirorio, pasos para ejecutar de manera local, pasos para ver el proyecto en linea(Github Pages), pasos para desplegar en Github Pages, Tecnogías utilizadas, limites  proximos pasos e información relevantes del proyecto

--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
         <div class="target">
         <h3>phishin</h3>
         <p>correos falsos que intentan robar tus datos</p>
-        <img src="favicon/phising.png"  width="50px">
+        <img src="./assets/favicon/phising.png"  width="50px">
         </div>
 
         <div class="target">
           <h3>malware</h3>
           <p>programas dañinos que afectan tu pc</p>
-          <img src="./favicon/malware.png" width="50px" alt="">
+          <img src="./assets/favicon/malware.png" width="50px" alt="">
         </div>
 
         <div class="target">
         <h3>ransomware</h3>
           <p>secuestra tus archivos y te pide dinero</p>
-          <img src="./favicon//ransomware.png" width="50px" alt="">
+          <img src="./assets/favicon/ransomware.png" width="50px" alt="">
         </div>
 
         </div>
@@ -97,23 +97,22 @@
         <ul>
 
           <li class="lista">
-            <img src="./favicon/contraseñas-seguras.png" width="50px">
-            <span>Usar contraseñas seguras</span>
+            <img src="./favicon//assets/favicon/contraseñas seguras</span>
           </li>
           <li class="lista">
-            <img src="./favicon/verificacion-2-paso.png" width="50px">
+            <img src="./assets/favicon/verificacion-2-paso.png" width="50px">
             <span>Activar la verificacion 2 paso</span>
           </li>
           <li class="lista">
-            <img src="./favicon/manten-dispositivos-actualizados.png" width="50px">
+            <img src="./assets/favicon/manten-dispositivos-actualizados.png" width="50px">
             <span>Actualiza tus dispositivos</span>
           </li>
           <li class="lista">
-            <img src="./favicon/enlaces-sospechoso.png" width="50px">
+            <img src="./assets/favicon/enlaces-sospechoso.png" width="50px">
             <span>No entres a enlaces sospechosos</span>
           </li>
           <li class="lista">
-            <img src="./favicon/copias-de-seguridad.png" width="50px">
+            <img src="./assets/favicon/copias-de-seguridad.png" width="50px">
             <span>Implementa copias de seguridad/span>
           </li>
 
