fix: se corrigieron errores en la redacción de algunas etiquetas

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -32,7 +32,7 @@
 
         <div class="contenedor_izquierdo">
 
-        <span class="etiqueta">seguridad digital</span>  
+        <h1 class="etiqueta">seguridad digital</h1>  
 
         <button  id="toggleTema" class="consejos">
         <span id="iconoTema">🌙</span>
@@ -97,7 +97,7 @@
         <ul>
 
           <li class="lista">
-            <img src="./favicon//assets/favicon/contraseñas seguras</span>
+            <img src="./assets/favicon/contraseñas-seguras.png</span>
           </li>
           <li class="lista">
             <img src="./assets/favicon/verificacion-2-paso.png" width="50px">
@@ -113,7 +113,7 @@
           </li>
           <li class="lista">
             <img src="./assets/favicon/copias-de-seguridad.png" width="50px">
-            <span>Implementa copias de seguridad/span>
+            <span>Implementa copias de seguridad</span>
           </li>
 
         </ul>
