fix: se agrego la propiedad alt en algunas imagenes

--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
         <div class="target">
         <h3>phishin</h3>
         <p>correos falsos que intentan robar tus datos</p>
-        <img src="./assets/favicon/phising.png"  width="50px">
+        <img src="./assets/favicon/phising.png" alt="icono de ataque de pishing" width="50px">
         </div>
 
         <div class="target">
           <h3>malware</h3>
           <p>programas dañinos que afectan tu pc</p>
-          <img src="./assets/favicon/malware.png" width="50px" alt="">
+          <img src="./assets/favicon/malware.png" alt="icono de malware" width="50px" >
         </div>
 
         <div class="target">
         <h3>ransomware</h3>
           <p>secuestra tus archivos y te pide dinero</p>
-          <img src="./assets/favicon/ransomware.png" width="50px" alt="">
+          <img src="./assets/favicon/ransomware.png" alt="icono de ransomware" width="50px" >
         </div>
 
         </div>
@@ -97,22 +97,22 @@
         <ul>
 
           <li class="lista">
-            <img src="./assets/favicon/contraseñas-seguras.png</span>
+           <img src="./assets/favicon/contraseñas-seguras.png" alt="icono de contraseñas-seguras" width="50px">
           </li>
           <li class="lista">
-            <img src="./assets/favicon/verificacion-2-paso.png" width="50px">
+            <img src="./assets/favicon/verificacion-2-paso.png" alt="icono de verificacion-2-paso" width="50px">
             <span>Activar la verificacion 2 paso</span>
           </li>
           <li class="lista">
-            <img src="./assets/favicon/manten-dispositivos-actualizados.png" width="50px">
+            <img src="./assets/favicon/manten-dispositivos-actualizados.png" alt="icono de manten-dispositivos-actualizados" width="50px">
             <span>Actualiza tus dispositivos</span>
           </li>
           <li class="lista">
-            <img src="./assets/favicon/enlaces-sospechoso.png" width="50px">
+            <img src="./assets/favicon/enlaces-sospechoso.png" alt="icono de enlaces-sospechoso" width="50px">
             <span>No entres a enlaces sospechosos</span>
           </li>
           <li class="lista">
-            <img src="./assets/favicon/copias-de-seguridad.png" width="50px">
+            <img src="./assets/favicon/copias-de-seguridad.png" alt="icono de copias-de-seguridad" width="50px">
             <span>Implementa copias de seguridad</span>
           </li>
 
